<resources>
    <string name="app_name">JavaBaseTest</string>
    <string name="settle_money_set">结算金额%1$s进入此账户</string>
    <string name="settle_money_small">交易金额小于等于%1$s进入此账户</string>
    <string name="settle_money_big">交易金额大于%1$s进入此账户</string>
    <string name="message">消息</string>
    <string name="translucent_statusbar">4.4及以上透明状态栏，兼容及5.0以上</string>
    <string name="app_name_develop">银联扫码枪开发版</string>
    <string name="app_company">中付支付科技有限公司</string>
    <string name="app_first">Copyright  2017年 中付支付. All rights reserved.</string>
    <string name="menu_setting">设置</string>
    <string name="menu_update">检查更新</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="logout_app">您将要退出登录？</string>
    <string name="register_title">注册</string>
    <string name="register_ing">注册中</string>
    <string name="register_loging">注册成功,自动登陆中...</string>
    <string name="register_mobile">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="register_hint_mobile">填写手机号码</string>
    <string name="register_hint_email">填写电子邮箱</string>
    <string name="register_hint_merchantno">填写商户号</string>
    <string name="register_hint_terminalno">填写终端号</string>
    <string name="register_hint_password">修改登录密码</string>
    <string name="register_hint_confirm_password">确认登录密码</string>
    <string name="register_hint_pay_password">设置支付密码</string>
    <string name="register_hint_pay_confirm_password">确认支付密码</string>
    <string name="register_hint_validate_code">短信校验码</string>
    <string name="register_get_validate_code">获取短信校验码</string>
    <string name="register_hint_email_validate_code">邮箱校验码</string>
    <string name="register_get_email_validate_code">获取短信校验码</string>
    <string name="register_password_is_visible">密码可见</string>
    <string name="register_agree">注册即代表您同意</string>
    <string name="register_protocol">《服务协议》</string>
    <string name="register_commit">注册,并自动登录</string>
    <string name="register_message_send_phone">验证码已经发到手机,请查收</string>
    <string name="register_hint_number">请输入6-20位登录密码</string>
    <string name="register_hint_numbers">请输入原密码</string>
    <string name="set_login_pwd">设置登录密码</string>
    <string name="login_title">登录</string>
    <string name="login_hint_account">手机号</string>
    <string name="login_hint_phone">手机号</string>
    <string name="login_hint_password">登录密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_find_password">忘记密码</string>
    <string name="login_phone_018">4001687018</string>
    <string name="main_home">首页</string>
    <string name="main_plan">优计划</string>
    <string name="main_mine">我的</string>
    <string name="main_scan">扫一扫付款</string>
    <string name="main_qr">付款码付款</string>
    <string name="main_order_amount">订单金额：</string>
    <string name="main_order_amount_type">HKT </string>
    <string name="main_order_pay_amount">支付金额：</string>
    <string name="main_more">查看详情</string>
    <string name="main_no_more">暂无订单</string>
    <string name="main_my_jifen">我的积分</string>
    <string name="trade_data_year">年</string>
    <string name="trade_data_month">月</string>
    <string name="trade_data_day">日</string>
    <string name="trade_jiaoyi">交易：</string>
    <string name="trade_bi">笔</string>
    <string name="trade_products_amount">产品金额 </string>
    <string name="trade_products_pay_amount">扣款金额 </string>
    <string name="main_integral">使用记录 </string>
    <string name="btn_filing_info_commit">资料提交</string>
    <string name="filing_info_commit_notice">为保障收款功能正常使用,请完善商户资料后使用</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_last_time">上次更新时间:</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有更多数据了...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="time_ganggang">刚刚</string>
    <string name="time_nianqian">年前</string>
    <string name="time_yueqian">月前</string>
    <string name="time_tianqian">天前</string>
    <string name="time_xiaoshiqian">小时前</string>
    <string name="time_fenzhongqian">分钟前</string>
    <string name="time_miaoqian">秒前</string>
    <string name="total_title_text">共</string>
    <string name="total_count_text">笔</string>
    <string name="year_text">年</string>
    <string name="month_text">月</string>
    <string name="day_text">日</string>
    <string name="item_amount_text">金额：</string>
    <string name="item_settle_amount_text">结算:</string>
    <string name="request_fail_try_again">请求失败,请重试</string>
    <string name="request_code_again">重新加载</string>
    <string name="qr_pay_success">收款成功</string>
    <string name="end_mobile_text">手机尾号:</string>
    <string name="service_exception">服务器异常,请稍后重试.</string>
    <string name="press_twice_quit">再按一次退出程序</string>
    <string name="query_pay_result">正在查询交易结果...请稍候</string>
    <string name="protocol_title">服务协议</string>
    <string name="protocol_introduce">用户须知</string>
    <string name="protocol_sksk">刷卡收款</string>
    <string name="protocol_skzz">刷卡转账</string>
    <string name="protocol_xykhk">信用卡还款</string>
    <string name="protocol_zzhk">转账汇款</string>
    <string name="protocol_zhtx">账户提现</string>
    <string name="protocol_sjcz">手机充值</string>
    <string name="protocol_zfbsk">支付宝收款</string>
    <string name="protocol_ggsyf">公用事业费缴费</string>
    <string name="plan_button">已抢光</string>
    <string name="plan_button_get">免费领取</string>
    <string name="plan_button_used">已领取，免费使用</string>
    <string name="plan_button_succeed">领取成功</string>
    <string name="plan_button_message">券已放至 我的优惠券 限62开头银行卡使用</string>
    <string name="plan_button_open">查看优惠券</string>
    <string name="plan_button_use">立即使用</string>
    <string name="function_title">应用中心</string>
    <string name="function_bound_card_null">您还没有绑定银行卡，请绑定银行卡后继续</string>
    <string name="function_set_pwd">您还没有设置支付密码，请先设置支付密码后继续操作</string>
    <string name="function_add_bank_card">您还没有设置绑定银行卡，请先绑定银行卡后继续操作</string>
    <string name="function_open_location">无法定位，请打开定位服务</string>
    <string name="account_title">我的账户</string>
    <string name="account_balance">账户余额</string>
    <string name="account_bank_card">我的银联卡</string>
    <string name="account_sino_card">SINO银联卡</string>
    <string name="account_transaction_record_query">交易记录</string>
    <string name="account_transaction_my_ticket">我的优惠券</string>
    <string name="account_trade_history">交易记录查询</string>
    <string name="account_logout">退出登录</string>
    <string name="account_language">多语言</string>
    <string name="account_head_img">头像</string>
    <string name="account_hello">下午好，</string>
    <string name="my_personal_info">我的</string>
    <string name="comment_app">评分</string>
    <string name="comment_tips">"大爷，给个好评吧~~"</string>
    <string name="comment_accept">"准奏"</string>
    <string name="comment_reject">"残忍拒绝"</string>
    <string name="multi_language_chinese">中文</string>
    <string name="multi_easy_chinese">简体中文</string>
    <string name="multi_unsimplified">繁體中文</string>
    <string name="multi_language_english">English</string>
    <string name="multi_language_zh">繁體中文</string>
    <string name="set_multi_language">设置语言</string>
    <string name="set_multi_language_success">设置语言成功</string>
    <string name="account_setting">帐号设置</string>
    <string name="app_re_login_error">账户在其它设备上登录,请重新登录</string>
    <string name="userinfo_title">账户信息</string>
    <string name="account_user_info">用户信息</string>
    <string name="account_real_name_auth">实名认证</string>
    <string name="account_modify_password">修改登录密码</string>
    <string name="account_setting_pay_password">设置支付密码</string>
    <string name="account_modify_pay_password">修改支付密码</string>
    <string name="account_find_pay_password">找回支付密码</string>
    <string name="account_mobile_password">设置手机密码</string>
    <string name="bankcard_title">银行卡</string>
    <string name="bankcard_add">添加银行卡</string>
    <string name="bankcard_hong_kong_currency">中国香港/澳门-港币</string>
    <string name="bankcard_singapore_currency">新加坡-新币</string>
    <string name="bankcard_malaysia_currency">马来西亚-马币</string>
    <string name="bankcard_other_currency">其它地区/国家-美元</string>
    <string name="bankcard_fastpay_change">此卡已经开通快捷支付,请换卡</string>
    <string name="bankcard_not_null">银行卡号不能为空</string>
    <string name="bankcard_name_null">持卡人姓名不能为空</string>
    <string name="bankcard_idcard_null">身份证/护照号不能为空</string>
    <string name="bankcard_idnb_five">证件号需大于5位</string>
    <string name="bankcard_area_null">开通区域不能为空</string>
    <string name="bankcard_cvn_null">cvn2或者卡有效期不能为空</string>
    <string name="bankcard_bound_successful">绑卡成功</string>
    <string name="bankcard_now_code_pay">是否立即扫码消费？</string>
    <string name="bankcard_code_pay">扫码消费</string>
    <string name="bankcard_later_speak">以后再说</string>
    <string name="bankcard_get_code">获取验证码</string>
    <string name="bankcard_send_code">验证码已经发到手机,请查收！</string>
    <string name="bankcard_country">国家</string>
    <string name="bankcard_number">卡号</string>
    <string name="bankcard_not_support">暂不支持该银行卡，请更换其他银行卡</string>
    <string name="bankcard_name">姓名</string>
    <string name="bankcard_id_number">证件号码</string>
    <string name="bankcard_valid_number">请输入本人有效证件号码</string>
    <string name="bankcard_true_name">请输入本人真实姓名</string>
    <string name="bankcard_own_number">请输入本人银行卡号</string>
    <string name="bankcard_choose_country">请选择消费所在国家</string>
    <string name="bankcard_import_phone">请输入</string>
    <string name="bankcard_import_six_pwd">请输入6位支付密码</string>
    <string name="bankcard_credit">CVN</string>
    <string name="bankcard_cvn_number">卡背后三位数字</string>
    <string name="bankcard_year_month">卡正面有效期，如1608</string>
    <string name="bankcard_cvn_error">CVN或有效期有误，请重试</string>
    <string name="bankcard_name_dead">获取的名字写死</string>
    <string name="bankcard_ic_number">获取的证件号写死</string>
    <string name="bankcard_phone_number">获取的手机号写死</string>
    <string name="bankcard_Invalid_again">卡号无效，请重试</string>
    <string name="choose_photo">本地相册</string>
    <string name="choose_phone">相机拍照</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm_msg">确定</string>
    <string name="text_next">下一步</string>
    <string name="about_us">关于我们</string>
    <string name="activity_intobank_number">输入银行卡号</string>
    <string name="activity_bank_name">持卡人姓名</string>
    <string name="activity_certificate_number">证件号</string>
    <string name="activity_valid">有效期</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/sheajin/WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="title_paired_devices">匹配的设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="sign_name_card">卡号：%1$s</string>
    <string name="sign_name_money_no">交易金额：%1$s元</string>
    <string name="sign_name_again">重签</string>
    <string name="sign_name_send">确认上送</string>
    <string name="sign_name_info">请持卡本人用正楷签名，姓名需清晰可辨，不清晰，不到账！</string>
    <string name="blue_scan">扫描</string>
</resources>