<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="@dimen/padding_300x"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_05x"
        android:text="@string/choose_photo"
        android:textSize="@dimen/medium_text_size" />

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="@dimen/padding_300x"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_05x"
        android:text="@string/choose_phone"
        android:textSize="@dimen/medium_text_size" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/padding_300x"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_05x"
        android:text="@string/text_cancel"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>