<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/alpha_10_black"
    android:orientation="vertical">

    <include layout="@layout/toolbar_primary" />

    <TextView
        android:id="@+id/tvPairedDevices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/alpha_10_black"
        android:paddingLeft="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="@color/white"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvPairedDevices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_corner"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/tvNewDevices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/alpha_10_black"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="@color/white"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_corner"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/btBluetoothScan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_style"
        android:text="@string/blue_scan" />

</LinearLayout>
